<resources>
    <string name="app_name">hw2_2</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="n0">0</string>
    <string name="action_mult">*</string>
    <string name="action_add">+</string>
    <string name="action_Sub">-</string>
    <string name="action_div">/</string>
    <string name="action_eq">=</string>
    <string name="action_clear">C</string>
    <string name="def_calc_value">0.00</string>
    <string name="imagebg">BG IMAGE</string>
    <string name="theme_select_text">Ночная тема</string>
    <string name="property">Настройки</string>
    <string name="apply">Применить</string>
    <string name="white">Светлая</string>
    <string name="dark">Темная</string>
</resources>