<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/calcText"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/buttonNumber7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMargin"
        android:text="@string/n7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcLine" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/buttonNumber4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/n4"
        app:layout_constraintStart_toStartOf="@+id/buttonNumber7"
        app:layout_constraintTop_toBottomOf="@+id/buttonNumber7" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/buttonNumber1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/n1"
        app:layout_constraintStart_toStartOf="@+id/buttonNumber4"
        app:layout_constraintTop_toBottomOf="@+id/buttonNumber4" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/buttonNumber8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMargin"
        android:text="@string/n8"
        app:layout_constraintStart_toEndOf="@+id/buttonNumber7"
        app:layout_constraintTop_toTopOf="@+id/buttonNumber7" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/buttonNumber5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/n5"
        app:layout_constraintStart_toStartOf="@+id/buttonNumber8"
        app:layout_constraintTop_toBottomOf="@+id/buttonNumber8" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/buttonNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/n2"
        app:layout_constraintStart_toStartOf="@+id/buttonNumber5"
        app:layout_constraintTop_toBottomOf="@+id/buttonNumber5" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/buttonNumber9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMargin"
        android:text="@string/n9"
        app:layout_constraintStart_toEndOf="@+id/buttonNumber8"
        app:layout_constraintTop_toTopOf="@+id/buttonNumber8" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/buttonNumber6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/n6"
        app:layout_constraintStart_toStartOf="@+id/buttonNumber9"
        app:layout_constraintTop_toBottomOf="@+id/buttonNumber9" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/buttonNumber3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/n3"
        app:layout_constraintStart_toStartOf="@+id/buttonNumber6"
        app:layout_constraintTop_toBottomOf="@+id/buttonNumber6" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/buttonActionMultiple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMargin"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/action_mult"
        app:layout_constraintStart_toEndOf="@+id/buttonNumber9"
        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/buttonActionSubstract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/action_Sub"
        app:layout_constraintStart_toStartOf="@+id/buttonActionMultiple"
        app:layout_constraintTop_toBottomOf="@+id/buttonActionMultiple" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/buttonActionAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/action_add"
        app:layout_constraintStart_toStartOf="@+id/buttonActionSubstract"
        app:layout_constraintTop_toBottomOf="@+id/buttonActionSubstract" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/buttonNumber0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/n0"
        app:layout_constraintEnd_toEndOf="@+id/buttonNumber1"
        app:layout_constraintStart_toStartOf="@+id/buttonNumber1"
        app:layout_constraintTop_toBottomOf="@+id/buttonNumber1" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/buttonActionEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMargin"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/action_eq"
        app:layout_constraintStart_toEndOf="@+id/buttonNumber0"
        app:layout_constraintTop_toBottomOf="@+id/buttonNumber3" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/buttonActionDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMargin"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/action_div"
        app:layout_constraintStart_toEndOf="@+id/buttonActionEquals"
        app:layout_constraintTop_toBottomOf="@+id/buttonNumber3" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/calcLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMargin"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/def_calc_value"
        android:textSize="@dimen/defaultFontSizeEditText"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonActionMultiple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMargin"
        android:text="@string/action_clear"
        app:layout_constraintStart_toEndOf="@+id/buttonNumber9"
        app:layout_constraintTop_toTopOf="@+id/buttonNumber9" />

</androidx.constraintlayout.widget.ConstraintLayout>