<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PropertyActivity">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/theme_select_text"
        android:textColor="@color/white"
        android:textOff="@string/white"
        android:textOn="@string/dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/buttonApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchTheme" />
</androidx.constraintlayout.widget.ConstraintLayout>